Add simple perceptron code for XOR gate

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -3421,62 +3421,247 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "  \n",
+    "WIP  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 多層パーセプトロン\n",
+    "XORゲートをパーセプトロンによって再現することを考える。  \n",
+    "パーセプトロンの入出力は次の通り。\n",
+    "\n",
+    "$x_{1}$|$x_{2}$|y\n",
+    "-:-|-:-|-:-\n",
+    "0|0|0\n",
+    "0|1|1\n",
+    "1|0|1\n",
+    "1|1|0\n",
+    "\n",
+    "これは線形分離不可能であり、一層パーセプトロンでは再現できない。  \n",
+    "例として、次のように分類を試みると失敗する。  "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/200\n",
+      "4/4 [==============================] - 0s - loss: 0.8427     \n",
+      "Epoch 2/200\n",
+      "4/4 [==============================] - 0s - loss: 0.8205     \n",
+      "Epoch 3/200\n",
+      "4/4 [==============================] - 0s - loss: 0.8049     \n",
+      "Epoch 4/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7924     \n",
+      "Epoch 5/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7822     \n",
+      "Epoch 6/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7754     \n",
+      "Epoch 7/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7688     \n",
+      "Epoch 8/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7622     \n",
+      "Epoch 9/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7578     \n",
+      "Epoch 10/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7555     \n",
+      "Epoch 11/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7520     \n",
+      "Epoch 12/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7497     \n",
+      "Epoch 13/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7468     \n",
+      "Epoch 14/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7454     \n",
+      "Epoch 15/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7439     \n",
+      "Epoch 16/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7425     \n",
+      "Epoch 17/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7422     \n",
+      "Epoch 18/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7404     \n",
+      "Epoch 19/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7394     \n",
+      "Epoch 20/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7393     \n",
+      "Epoch 21/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7380     \n",
+      "Epoch 22/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7368     \n",
+      "Epoch 23/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7371     \n",
+      "Epoch 24/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7363     \n",
+      "Epoch 25/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7356     \n",
+      "Epoch 26/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7348     \n",
+      "Epoch 27/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7344     \n",
+      "Epoch 28/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7338     \n",
+      "Epoch 29/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7328     \n",
+      "Epoch 30/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7326     \n",
+      "Epoch 31/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7319     \n",
+      "Epoch 32/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7317     \n",
+      "Epoch 33/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7304     \n",
+      "Epoch 34/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7306     \n",
+      "Epoch 35/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7304     \n",
+      "Epoch 36/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7293     \n",
+      "Epoch 37/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7295     \n",
+      "Epoch 38/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7281     \n",
+      "Epoch 39/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7280     \n",
+      "Epoch 40/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7282     \n",
+      "Epoch 41/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7276     \n",
+      "Epoch 42/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7277     \n",
+      "Epoch 43/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7274     \n",
+      "Epoch 44/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7270     \n",
+      "Epoch 45/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7267     \n",
+      "Epoch 46/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7262     \n",
+      "Epoch 47/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7251     \n",
+      "Epoch 48/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7249     \n",
+      "Epoch 49/200\n",
+      "4/4 [==============================] - ETA: 0s - loss: 0.581 - 0s - loss: 0.7247     \n",
+      "Epoch 50/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7244     \n",
+      "Epoch 51/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7246     \n",
+      "Epoch 52/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7250     \n",
+      "Epoch 53/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7246     \n",
+      "Epoch 54/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7242     \n",
+      "Epoch 55/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7241     \n",
+      "Epoch 56/200\n",
+      "4/4 [==============================] - ETA: 0s - loss: 0.597 - 0s - loss: 0.7242     \n",
+      "Epoch 57/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7233     \n",
+      "Epoch 58/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7237     \n",
+      "Epoch 59/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7235     \n",
+      "Epoch 60/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7228     \n",
+      "Epoch 61/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7232     \n",
+      "Epoch 62/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7231     \n",
+      "Epoch 63/200\n",
+      "4/4 [==============================] - ETA: 0s - loss: 0.602 - 0s - loss: 0.7229     \n",
+      "Epoch 64/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7224     \n",
+      "Epoch 65/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7225     \n",
+      "Epoch 66/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7215     \n",
+      "Epoch 67/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7224     \n",
+      "Epoch 68/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7219     \n",
+      "Epoch 69/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7218     \n",
+      "Epoch 70/200\n",
+      "4/4 [==============================] - ETA: 0s - loss: 0.617 - 0s - loss: 0.7221     \n",
+      "Epoch 71/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7220     \n",
+      "Epoch 72/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7219     \n",
+      "Epoch 73/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7211     \n",
+      "Epoch 74/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7210     \n",
+      "Epoch 75/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7213     \n",
+      "Epoch 76/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7216     \n",
+      "Epoch 77/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7205     \n",
+      "Epoch 78/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7213     \n",
+      "Epoch 79/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7214     \n",
+      "Epoch 80/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7213     \n",
+      "Epoch 81/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7205     \n",
+      "Epoch 82/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7204     \n",
+      "Epoch 83/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7210     \n",
+      "Epoch 84/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7206     \n",
+      "Epoch 85/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7209     \n",
+      "Epoch 86/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7208     \n",
+      "Epoch 87/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7206     \n",
+      "Epoch 88/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7207     \n",
+      "Epoch 89/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7196     \n",
+      "Epoch 90/200\n",
+      "4/4 [==============================] - 0s - loss: 0.7206     \n",
+      "Epoch 91/200\n",
+      "1/4 [======>.......................] - ETA: 0s - loss: 0.7274"
+     ]
+    }
+   ],
    "source": [
-    " as np\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "from torch.autograd import Variable\n",
-    "import torch.nn.functional as F\n",
-    "from torch import optim\n",
-    "import torch.utils.data\n",
+    "import numpy as np\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation\n",
+    "from keras.optimizers import SGD\n",
     "\n",
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.fc1 = nn.Linear(M,K)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = F.sigmoid(self.fc1(x))\n",
-    "        return x\n",
+    "np.random.seed(0)\n",
     "\n",
-    "net = Net()\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.9)\n",
+    "X = np.array([[0,0], [0,1], [1,0], [1,1]])\n",
+    "Y = np.array([[0],[1],[1],[0]])\n",
     "\n",
-    "for epoch in range(20):\n",
+    "model = Sequential([\n",
+    "    #Dense(input_dim=2, output_dim=1),\n",
+    "    Dense(units=1, input_dim=2), # keras v2.0へのアップデートに伴う変更\n",
+    "    Activation('sigmoid')\n",
+    "])\n",
     "\n",
-    "    running_loss = 0.0 \n",
+    "model.compile(loss='binary_crossentropy', optimizer=SGD(lr=0.1))\n",
+    "model.fit(X,Y, epochs=200, batch_size=1)\n",
     "\n",
-    "    for i, data in enumerate(zip(X,Y)):\n",
-    "        inputs, labels = data\n",
-    "        inputs, labels = Variable(torch.FloatTensor(inputs)), Variable(torch.FloatTensor(labels))\n",
-    "        \n",
-    "        # GPUを使用する場合の例\n",
-    "        # net.cuda()\n",
-    "        # inputs, labels = Variable(inputs.cuda()), Variable(labels.cuda())\n",
-    "        \n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = net(inputs)\n",
-    "\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        running_loss += loss.data[0]\n",
-    "\n",
-    "    print('epoch:{}/200, loss:{}'.format(epoch + 1, running_loss))\n",
-    "\n",
-    "print('Finished Training')\n",
-    "print(net(Variable(torch.FloatTensor(X))))"
+    "prob = model.predict_proba(X, batch_size=1)\n",
+    "print(prob)"
    ]
   }
  ],
