add explanation about XOR gate

--- a/JupyterNotebook_notetaion_memo.ipynb
+++ b/JupyterNotebook_notetaion_memo.ipynb
@@ -850,7 +850,7 @@
     "　・rank, subgraph, 見えないノードを活用すれば大体期待した配置にできる  \n",
     "　・texは使えないがunicodeは書ける  \n",
     "　・edgeやrankの記述で初登場したnodeは、名前と表示を同じものとして自動で生成される  \n",
-    "　　　（よって名前と表示が同じで良いならばc.nodeのような記載を省略できる）  "
+    "　　　（よって名前と表示が同じで良いならばc.node()のような記載を省略できる）  "
    ]
   },
   {
