--- a/Syoukai_DeepLearning_2.ipynb
+++ b/Syoukai_DeepLearning_2.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +584,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fe77bd7a6a0>"
+       "<graphviz.dot.Digraph at 0x7fbf93fd5748>"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
