--- a/Syoukai_DeepLearning_2.ipynb
+++ b/Syoukai_DeepLearning_2.ipynb
@@ -980,14 +980,14 @@
     "各層の活性化前の値をそれぞれ\n",
     "\n",
     "\\begin{align*}\n",
-    "p := WX + B\n",
+    "p := WX + B \\\\\n",
     "q := VH + C\n",
     "\\end{align*}\n",
     "\n",
     "とおく。  \n",
     "$W = (w_{1}, \\dots, w_{J})^{\\mathrm{T}}$ および $V = (v_{1}, \\dots, v_{K})^{\\mathrm{T}}$ に対して  \n",
     "\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{align*}\n",
     "\\begin{cases}\n",
     "\\frac{\\partial E_{n}}{\\partial w_{j}} &= \\frac{\\partial E_{n}}{\\partial p_{j}}\\frac{\\partial p_{j}}{\\partial w_{j}} &= \\frac{\\partial E_{n}}{\\partial p_{j}}X \\\\\n",
     "\\frac{\\partial E_{n}}{\\partial B_{j}} &= \\frac{\\partial E_{n}}{\\partial p_{j}}\\frac{\\partial p_{j}}{\\partial B_{j}} &= \\frac{\\partial E_{n}}{\\partial p_{j}}\n",
@@ -997,7 +997,7 @@
     "\\frac{\\partial E_{n}}{\\partial v_{k}} &= \\frac{\\partial E_{n}}{\\partial q_{k}}\\frac{\\partial q_{k}}{\\partial v_{k}} &= \\frac{\\partial E_{n}}{\\partial q_{k}}H \\\\\n",
     "\\frac{\\partial E_{n}}{\\partial C_{k}} &= \\frac{\\partial E_{n}}{\\partial q_{k}}\\frac{\\partial q_{k}}{\\partial C_{k}} &= \\frac{\\partial E_{n}}{\\partial q_{k}}\n",
     "\\end{cases}\n",
-    "\\end{eqnarray*}\n",
+    "\\end{align*}\n",
     "\n",
     "となるから、$\\frac{\\partial E_{n}}{\\partial p_{j}}$ および $\\frac{\\partial E_{n}}{\\partial q_{k}}$ がわかれば十分である。"
    ]
