Add tensorflow code of XOR gate

--- a/Syoukai_DeepLearning_2.ipynb
+++ b/Syoukai_DeepLearning_2.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### [詳解ディープラーニング　TensorFlow・Kerasによる時系列データ処理](https://book.mynavi.jp/ec/products/detail/id=72995)\n",
+    "　巣籠悠輔 著  \n",
+    "  \n",
+    "support site : [https://book.mynavi.jp/supportsite/detail/9784839962517.html](https://book.mynavi.jp/supportsite/detail/9784839962517.html)  \n",
+    "github : [yusugomori/deeplearning-tensorflow-keras](https://github.com/yusugomori/deeplearning-tensorflow-keras) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### （３章　続き）"
    ]
   },
@@ -1029,9 +1040,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    ">（以下の節は、  \n",
+    ">以下の節は、  \n",
     "[誤差逆伝播法のノート](https://qiita.com/Ugo-Nama/items/04814a13c9ea84978a4c)、および  \n",
-    "Michael Nielsen著 [「ニューラルネットワークと深層学習」　Chapter 2](http://nnadl-ja.github.io/nnadl_site_ja/chap2.html)を参照した。）"
+    "Michael Nielsen著 [「ニューラルネットワークと深層学習」　Chapter 2](http://nnadl-ja.github.io/nnadl_site_ja/chap2.html)を参照した。  \n",
+    "表記は一部を除き文献に合わせた。"
    ]
   },
   {
@@ -1195,17 +1207,80 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 実装"
+    "#### TensorFlowによる実装"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch:0\n",
+      "epoch:1000\n",
+      "epoch:2000\n",
+      "epoch:3000\n",
+      "\n",
+      "classified: \n",
+      " [[ True]\n",
+      " [False]\n",
+      " [ True]\n",
+      " [False]] \n",
+      "\n",
+      "output probability: [[ 0.00417513]\n",
+      " [ 0.49864519]\n",
+      " [ 0.99473453]\n",
+      " [ 0.50245166]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# dataset\n",
+    "X = np.array([[0,0], [0,1], [1,0], [1,1]])\n",
+    "Y = np.array([[0], [1], [1], [0]])\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, shape=[None,2])\n",
+    "t = tf.placeholder(tf.float32, shape=[None,1])\n",
+    "W = tf.Variable(tf.truncated_normal([2,2]))\n",
+    "b = tf.Variable(tf.zeros([2]))\n",
+    "h = tf.nn.sigmoid(tf.matmul(x,W)+b)\n",
+    "V = tf.Variable(tf.truncated_normal([2,1]))\n",
+    "c = tf.Variable(tf.zeros([1]))\n",
+    "y = tf.nn.sigmoid(tf.matmul(h,V)+c)\n",
+    "cross_entropy = -tf.reduce_sum(t*tf.log(y) + (1-t)*tf.log(1-y))\n",
+    "\n",
+    "train_step = tf.train.GradientDescentOptimizer(0.1).minimize(cross_entropy)\n",
+    "correct_prediction = tf.equal(tf.to_float(tf.greater(y,0.5)),t)\n",
+    "\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "\n",
+    "for epoch in range(4000):\n",
+    "    sess.run(train_step, feed_dict={\n",
+    "        x: X,\n",
+    "        t: Y\n",
+    "    })\n",
+    "    if epoch % 1000 ==0:\n",
+    "        print('epoch:{}'.format(epoch))\n",
+    "        \n",
+    "classified = correct_prediction.eval(session=sess, feed_dict={\n",
+    "    x: X,\n",
+    "    t: Y\n",
+    "})\n",
+    "prob = y.eval(session=sess, feed_dict={\n",
+    "    x: X\n",
+    "})\n",
+    "\n",
+    "print('\\nclassified: \\n {} \\n'.format(classified))\n",
+    "print('output probability: {}'.format(prob))"
+   ]
   }
  ],
  "metadata": {
