Add explanation about ROC curve

--- a/Syoukai_DeepLearning_2.ipynb
+++ b/Syoukai_DeepLearning_2.ipynb
@@ -1648,7 +1648,8 @@
    "metadata": {},
    "source": [
     "下図にカットオフ値とROC曲線の関係を示す。  \n",
-    "  \n",
+    "（注：github上では表示されません。ご自身の環境でお試しください）  \n",
+    "\n",
     "　（参考：[【統計学】ROC曲線とは何か、アニメーションで理解する。](https://qiita.com/kenmatsu4/items/550b38f4fa31e9af6f4f)）  "
    ]
   },
