Add explanation about dropout

--- a/Syoukai_DeepLearning_3.ipynb
+++ b/Syoukai_DeepLearning_3.ipynb
@@ -875,7 +875,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1075,9 +1077,89 @@
    "metadata": {},
    "source": [
     "---\n",
-    "WIP\n",
-    "    "
+    "### Dropout"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overfittingなどの問題のため、深層学習では訓練データに対して予測精度を向上させたとしても  \n",
+    "評価データや実運用時の予測精度が上がるとは限らない。  \n",
+    "  \n",
+    "訓練データに含まれない未知のデータに対して予測精度を上昇させるように学習することを汎化（generalization）、  \n",
+    "また未知データに対しての予測性能を汎化性能（generalization ability）という。  \n",
+    "  \n",
+    "汎化のための手法はいくつも存在し、その一つがドロップアウト（dropout）である。    \n",
+    "これは学習時にランダムにニューロンをdropoutさせて出力を０にする手法で、  \n",
+    "擬似的なアンサンブル学習（個別に学習させた複数の識別器の出力から予測を作る）とみなすことができる。  \n",
+    "  \n",
+    "ドロップアウトの実装では対象の層と同じshapeを持つarrayであるマスクベクトル $m$ を用意し、  \n",
+    "学習時には出力との要素積をとり、出力時にはoff（or 全て１）とする。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "式で表すと、あるネットワークの入力 $x$ に対する出力 $h_{i}$ が  \n",
+    "  \n",
+    "\\begin{align*}\n",
+    "h_{i} = f(Wx + b)\n",
+    "\\end{align*}\n",
+    "  \n",
+    "と表されるとき、これを  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "h_{i} = f(Wx + b) \\odot m\n",
+    "\\end{align*}\n",
+    "\n",
+    "へと変更する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このとき続く層の出力 $ h_{i+1}$ を\n",
+    "\n",
+    "\\begin{align*}\n",
+    "h_{i+1} = g(Vh_{1} + c)\n",
+    "\\end{align*}\n",
+    "\n",
+    "また、それぞれの層で活性化関数に代入される重み付き和を\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p := Wx + b \\\\\n",
+    "q := Vh_{1} + c\n",
+    "\\end{align*}\n",
+    "\n",
+    "とするとき、誤差項 $ \\delta_{h1}, \\delta_{h2} $ は、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\delta_{h1} &:= \\frac{\\partial E_{n}}{\\partial p} \\\\\n",
+    "\\delta_{h2} &:= \\frac{\\partial E_{n}}{\\partial q}\n",
+    "\\end{align*}\n",
+    "\n",
+    "より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\delta_{h1} &= \\frac{\\partial E_{n}}{\\partial q}\\frac{\\partial q}{\\partial p} \\\\\n",
+    "&= \\frac{\\partial E_{n}}{\\partial q}\\frac{\\partial}{\\partial p}(Vf(p) \\odot m + c) \\\\\n",
+    "&= f^{\\prime}(p) \\odot m \\odot V^{\\mathrm{T}}\\delta_{h2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1096,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
