--- a/Syoukai_DeepLearning_3.ipynb
+++ b/Syoukai_DeepLearning_3.ipynb
@@ -1124,32 +1124,231 @@
     "このとき続く層の出力 $ h_{i+1}$ を\n",
     "\n",
     "\\begin{align*}\n",
-    "h_{i+1} = g(Vh_{1} + c)\n",
+    "h_{i+1} = g(Vh_{i} + c)\n",
     "\\end{align*}\n",
     "\n",
     "また、それぞれの層で活性化関数に代入される重み付き和を\n",
     "\n",
     "\\begin{align*}\n",
     "p := Wx + b \\\\\n",
-    "q := Vh_{1} + c\n",
+    "q := Vh_{i} + c\n",
     "\\end{align*}\n",
     "\n",
-    "とするとき、誤差項 $ \\delta_{h1}, \\delta_{h2} $ は、\n",
+    "とするとき、誤差項 $ \\delta_{hi}, \\delta_{hi+1} $ は、\n",
     "\n",
     "\\begin{align*}\n",
-    "\\delta_{h1} &:= \\frac{\\partial E_{n}}{\\partial p} \\\\\n",
-    "\\delta_{h2} &:= \\frac{\\partial E_{n}}{\\partial q}\n",
+    "\\delta_{hi} &:= \\frac{\\partial E_{n}}{\\partial p} \\\\\n",
+    "\\delta_{hi+1} &:= \\frac{\\partial E_{n}}{\\partial q}\n",
     "\\end{align*}\n",
     "\n",
     "より\n",
     "\n",
     "\\begin{align*}\n",
-    "\\delta_{h1} &= \\frac{\\partial E_{n}}{\\partial q}\\frac{\\partial q}{\\partial p} \\\\\n",
+    "\\delta_{hi} &= \\frac{\\partial E_{n}}{\\partial q}\\frac{\\partial q}{\\partial p} \\\\\n",
     "&= \\frac{\\partial E_{n}}{\\partial q}\\frac{\\partial}{\\partial p}(Vf(p) \\odot m + c) \\\\\n",
-    "&= f^{\\prime}(p) \\odot m \\odot V^{\\mathrm{T}}\\delta_{h2}\n",
+    "&= f^{\\prime}(p) \\odot m \\odot V^{\\mathrm{T}}\\delta_{hi+1}\n",
     "\\end{align*}\n",
     "\n",
     "となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "---\n",
+    "#### Tensorflowでの実装例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from sklearn.datasets import fetch_mldata\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "class toy_test_tf_mnist(object):\n",
+    "    def __init__(self, data_size=10000, n_hidden_layer = 3, n_hidden_cell=200, \n",
+    "                 train_size=0.8, test_size=0.2, learning_rate=0.01, np_seed=None):\n",
+    "        self.data_size = data_size\n",
+    "        self.n_hidden_layer = max(n_hidden_layer, 1)\n",
+    "        self.n_hidden_cell = max(n_hidden_cell, 1)\n",
+    "        self.train_size = train_size\n",
+    "        self.test_size = test_size\n",
+    "        self.lr = learning_rate\n",
+    "        self.np_seed = np_seed\n",
+    "        \n",
+    "    def set_each_dataset(self):\n",
+    "        mnist = fetch_mldata('MNIST original', data_home=\"./dataset\")\n",
+    "        indices = np.random.permutation(len(mnist.data))[:self.data_size]\n",
+    "        self.X = mnist.data[indices]\n",
+    "        self.Y = mnist.target[indices]\n",
+    "        self.Y_onehot = np.eye(10)[self.Y.astype(int)]\n",
+    "        self.X_train, self.X_test, self.Y_train, self.Y_test = \\\n",
+    "            train_test_split(self.X, self.Y_onehot, train_size=self.train_size, test_size=self.test_size)\n",
+    "        self.n_in, self.n_out = self.X_train[0].shape[0], self.Y_train[0].shape[0]\n",
+    "\n",
+    "    def generate_model(self):\n",
+    "        self.x = tf.placeholder(tf.float32, shape=[None, self.n_in])\n",
+    "        self.t = tf.placeholder(tf.float32, shape=[None, self.n_out])\n",
+    "        self.keep_prob = tf.placeholder(tf.float32)\n",
+    "        \n",
+    "        self.W = {}\n",
+    "        self.b = {}\n",
+    "        self.h = {}\n",
+    "        self.h_drop = {}\n",
+    "        \n",
+    "        # input layer - hidden layer 1\n",
+    "        self.W[0] = tf.Variable(tf.truncated_normal([self.n_in, self.n_hidden_cell], stddev=0.01))\n",
+    "        self.b[0] = tf.Variable(tf.zeros([self.n_hidden_cell]))\n",
+    "        self.h[0] = tf.nn.relu(tf.matmul(self.x, self.W[0]) + self.b[0])\n",
+    "        self.h_drop[0] = tf.nn.dropout(self.h[0], self.keep_prob)\n",
+    "\n",
+    "        for i in range(self.n_hidden_layer - 1):\n",
+    "            self.W[i+1] = tf.Variable(tf.truncated_normal([self.n_hidden_cell, self.n_hidden_cell], stddev=0.01))\n",
+    "            self.b[i+1] = tf.Variable(tf.zeros([self.n_hidden_cell]))\n",
+    "            self.h[i+1] = tf.nn.relu(tf.matmul(self.h[i], self.W[i+1]) + self.b[i+1])\n",
+    "            self.h_drop[i+1] = tf.nn.dropout(self.h[i+1], self.keep_prob)\n",
+    "\n",
+    "        # hidden layer - output layer\n",
+    "        self.W[self.n_hidden_layer] = tf.Variable(tf.truncated_normal([self.n_hidden_cell, self.n_out], stddev=0.01))\n",
+    "        self.b[self.n_hidden_layer] = tf.Variable(tf.zeros([self.n_out]))\n",
+    "        self.y = tf.nn.softmax(tf.matmul(self.h_drop[self.n_hidden_layer-1], self.W[self.n_hidden_layer]) + self.b[self.n_hidden_layer])\n",
+    "\n",
+    "        self.cross_entropy = tf.reduce_mean(-tf.reduce_sum(self.t * tf.log(self.y), reduction_indices=[1]))\n",
+    "        self.train_step = tf.train.GradientDescentOptimizer(self.lr).minimize(self.cross_entropy)\n",
+    "        \n",
+    "        self.correct_prediction = tf.equal(tf.argmax(self.y, 1), tf.argmax(self.t, 1))\n",
+    "        self.accuracy = tf.reduce_mean(tf.cast(self.correct_prediction , tf.float32))\n",
+    "        \n",
+    "    def fit(self, epochs=30, batch_size=200):\n",
+    "        init = tf.global_variables_initializer()\n",
+    "        sess = tf.Session()\n",
+    "        sess.run(init)\n",
+    "        \n",
+    "        n_batches = int(self.data_size * self.train_size) // batch_size\n",
+    "        \n",
+    "        for epoch in range(epochs):\n",
+    "            X_, Y_ = shuffle(self.X_train, self.Y_train)\n",
+    "            \n",
+    "            for i in range(n_batches):\n",
+    "                start = i * batch_size\n",
+    "                end = start + batch_size\n",
+    "            \n",
+    "                sess.run(self.train_step, feed_dict={\n",
+    "                    self.x: X_[start:end],\n",
+    "                    self.t: Y_[start:end],\n",
+    "                    self.keep_prob:0.5\n",
+    "                })\n",
+    "                \n",
+    "            loss = self.cross_entropy.eval(session=sess, feed_dict={\n",
+    "                self.x: X_,\n",
+    "                self.t: Y_,\n",
+    "                self.keep_prob: 1.0\n",
+    "            })\n",
+    "            acc = self.accuracy.eval(session=sess, feed_dict={\n",
+    "                self.x: X_,\n",
+    "                self.t: Y_,\n",
+    "                self.keep_prob: 1.0\n",
+    "            })\n",
+    "            print('epoch:', epoch, ' loss:', loss, ' accuracy:', acc)\n",
+    "                \n",
+    "        accuracy_rate = self.accuracy.eval(session=sess, feed_dict={\n",
+    "            self.x: X_test,\n",
+    "            self.t: Y_test,\n",
+    "            self.keep_prob: 1.0\n",
+    "        })\n",
+    "        print('accuracy: ', accuracy_rate)\n",
+    "\n",
+    "    def predict(self):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0  loss: 2.21847  accuracy: 0.355\n",
+      "epoch: 1  loss: 1.34172  accuracy: 0.518875\n",
+      "epoch: 2  loss: 0.68848  accuracy: 0.795375\n",
+      "epoch: 3  loss: 0.510784  accuracy: 0.85475\n",
+      "epoch: 4  loss: 0.423561  accuracy: 0.877875\n",
+      "epoch: 5  loss: 0.406976  accuracy: 0.879\n",
+      "epoch: 6  loss: 0.338044  accuracy: 0.90175\n",
+      "epoch: 7  loss: 0.275091  accuracy: 0.920875\n",
+      "epoch: 8  loss: 0.252884  accuracy: 0.927875\n",
+      "epoch: 9  loss: 0.223942  accuracy: 0.9385\n",
+      "epoch: 10  loss: 0.199813  accuracy: 0.946625\n",
+      "epoch: 11  loss: 0.183947  accuracy: 0.951625\n",
+      "epoch: 12  loss: 0.213043  accuracy: 0.93775\n",
+      "epoch: 13  loss: 0.16217  accuracy: 0.95425\n",
+      "epoch: 14  loss: 0.137895  accuracy: 0.963375\n",
+      "epoch: 15  loss: 0.13419  accuracy: 0.961375\n",
+      "epoch: 16  loss: 0.113877  accuracy: 0.969\n",
+      "epoch: 17  loss: 0.114468  accuracy: 0.96975\n",
+      "epoch: 18  loss: 0.100676  accuracy: 0.9715\n",
+      "epoch: 19  loss: 0.102155  accuracy: 0.969875\n",
+      "epoch: 20  loss: 0.0779099  accuracy: 0.98075\n",
+      "epoch: 21  loss: 0.0769341  accuracy: 0.979375\n",
+      "epoch: 22  loss: 0.0945332  accuracy: 0.972\n",
+      "epoch: 23  loss: 0.0578768  accuracy: 0.98725\n",
+      "epoch: 24  loss: 0.0534197  accuracy: 0.987625\n",
+      "epoch: 25  loss: 0.0524644  accuracy: 0.986125\n",
+      "epoch: 26  loss: 0.0467163  accuracy: 0.988125\n",
+      "epoch: 27  loss: 0.0508107  accuracy: 0.985625\n",
+      "epoch: 28  loss: 0.035354  accuracy: 0.99225\n",
+      "epoch: 29  loss: 0.033393  accuracy: 0.993125\n",
+      "accuracy:  0.952\n"
+     ]
+    }
+   ],
+   "source": [
+    "testenv = toy_test_tf_mnist(data_size=10000, n_hidden_layer=3, n_hidden_cell=200, \n",
+    "                 train_size=0.8, test_size=0.2, learning_rate=0.01, np_seed=None)\n",
+    "testenv.set_each_dataset()\n",
+    "testenv.generate_model()\n",
+    "testenv.fit(epochs=30, batch_size=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0  loss: 1.17893  accuracy: 0.707875\n",
+      "epoch: 1  loss: 0.586022  accuracy: 0.816\n",
+      "epoch: 2  loss: 0.543899  accuracy: 0.820125\n",
+      "epoch: 3  loss: 0.321673  accuracy: 0.906375\n",
+      "epoch: 4  loss: 0.312083  accuracy: 0.9075\n",
+      "epoch: 5  loss: 0.257091  accuracy: 0.921\n",
+      "epoch: 6  loss: 0.251061  accuracy: 0.925125\n",
+      "epoch: 7  loss: 0.205376  accuracy: 0.939125\n",
+      "epoch: 8  loss: 0.174794  accuracy: 0.95025\n"
+     ]
+    }
+   ],
+   "source": [
+    "testenv = toy_test_tf_mnist(data_size=10000, n_hidden_layer=3, n_hidden_cell=400, \n",
+    "                 train_size=0.8, test_size=0.2, learning_rate=0.01, np_seed=None)\n",
+    "testenv.set_each_dataset()\n",
+    "testenv.generate_model()\n",
+    "testenv.fit(epochs=30, batch_size=200)"
    ]
   },
   {
@@ -1159,7 +1358,61 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation\n",
+    "from keras.optimizers import SGD\n",
+    "\n",
+    "from keras.utils.generic_utils import CustomObjectScope\n",
+    "from sklearn.datasets import fetch_mldata\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def exam_activation_f(activation_function_name, \n",
+    "                      epochs=50, batch_size=200, verbose=1,\n",
+    "                      random_seed=None, data_size=10000):\n",
+    "    # for using same seed as the book, set random_seed=1234\n",
+    "\n",
+    "    # initialize random seed\n",
+    "    np.random.seed(random_seed)\n",
+    "\n",
+    "    # dataset\n",
+    "    mnist = fetch_mldata('MNIST original', data_home=\"./dataset\")\n",
+    "    indices = np.random.permutation(len(mnist.data))[:data_size]\n",
+    "    X = mnist.data[indices]\n",
+    "    Y = mnist.target[indices]\n",
+    "    Y_onehot = np.eye(10)[Y.astype(int)]\n",
+    "    X_train, X_test, Y_train, Y_test = train_test_split(X, Y_onehot, train_size=0.8, test_size=0.2)\n",
+    "\n",
+    "    # model definition\n",
+    "    n_in, n_hidden, n_out = X[0].shape[0], 200, Y_onehot[0].shape[0]\n",
+    "\n",
+    "    with CustomObjectScope({'custom_categorical_crossentropy':custom_categorical_crossentropy,\n",
+    "                            'swish':swish\n",
+    "                           }):\n",
+    "        model = Sequential()\n",
+    "        model.add(Dense(n_hidden, input_dim=n_in))\n",
+    "        model.add(Activation(activation_function_name))\n",
+    "        model.add(Dense(n_hidden))\n",
+    "        model.add(Activation(activation_function_name))\n",
+    "        model.add(Dense(n_hidden))\n",
+    "        model.add(Activation(activation_function_name))\n",
+    "        model.add(Dense(n_hidden))\n",
+    "        model.add(Activation(activation_function_name))\n",
+    "        model.add(Dense(n_out))\n",
+    "        model.add(Activation('softmax'))\n",
+    "\n",
+    "        model.compile(loss='custom_categorical_crossentropy', \n",
+    "#        model.compile(loss='categorical_crossentropy', \n",
+    "                      optimizer=SGD(lr=0.01), \n",
+    "                      metrics=['accuracy'])\n",
+    "\n",
+    "        history = model.fit(X_train, Y_train, epochs=epochs, batch_size=batch_size, verbose=verbose)\n",
+    "        loss_and_metrics = model.evaluate(X_test, Y_test)\n",
+    "        print(loss_and_metrics)\n",
+    "\n",
+    "        return history"
+   ]
   }
  ],
  "metadata": {
@@ -1178,7 +1431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
