Add learning step visualization in tensorflow

--- a/Syoukai_DeepLearning_3.ipynb
+++ b/Syoukai_DeepLearning_3.ipynb
@@ -2332,7 +2332,9 @@
     "・調査範囲ではバグの原因不明、修正できず。  \n",
     "　追試ではreluを使った学習はそれなりに成功するが、今回分のコードでは各10回試験して一度も学習できず。  \n",
     "   \n",
-    "　今回は棚上げして先に進む。  "
+    "　今回は棚上げして先に進む。  \n",
+    " \n",
+    "（追記：Weightsの初期化部分をランダムにしないことで、問題が再現できることを確認した）"
    ]
   },
   {
