Add weight initialization in Keras

--- a/Syoukai_DeepLearning_3.ipynb
+++ b/Syoukai_DeepLearning_3.ipynb
@@ -2329,12 +2329,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "・調査範囲ではバグの原因不明、修正できず。  \n",
-    "　追試ではreluを使った学習はそれなりに成功するが、今回分のコードでは各10回試験して一度も学習できず。  \n",
+    "・本単元までで紹介された要素を対象として調査したが、この範囲ではバグの原因は不明で、修正できず。  \n",
+    "　追試用コードではreluを使った学習はそれなりに成功するが、今回分のコードでは各10回試験して一度も学習できず。  \n",
     "   \n",
     "　今回は棚上げして先に進む。  \n",
-    " \n",
-    "（追記：Weightsの初期化部分をランダムにしないことで、問題が再現できることを確認した）"
+    "  \n",
+    "追記：  \n",
+    "　Weightsの初期化部分をランダムにしないことで、問題が再現できることを確認した。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Kerasにおける重みの初期化方法\n",
+    "　参考：[Keras Documentation | レイヤーの重み初期化方法](https://keras.io/ja/initializations/)  \n",
+    "  \n",
+    "・初期化用引数により、重みをランダムに初期化できる。  \n",
+    "  \n",
+    "~~~python\n",
+    "model.add(Dense(64, init='uniform'))\n",
+    "~~~\n",
+    "\n",
+    "初期化方法一覧\n",
+    "- uniform\n",
+    "- lecun_uniform (LeCun 98)\n",
+    "- normal\n",
+    "- identity\n",
+    "- orthogonal\n",
+    "- zero\n",
+    "- glorot_normal (Glorot 2010)\n",
+    "- glorot_uniform\n",
+    "- he_normal (He et al., 2014)\n",
+    "- he_uniform"
    ]
   },
   {
