Formula of Optimizers

--- a/Syoukai_DeepLearning_4.ipynb
+++ b/Syoukai_DeepLearning_4.ipynb
@@ -980,7 +980,63 @@
    "metadata": {},
    "source": [
     "---\n",
-    "WIP\n"
+    "### Optimizer\n",
+    "　よく使われる最適化手法は勾配降下法とその改良手法である。  \n",
+    "　そのうちいくつかを選んで記載する。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 先に結論  \n",
+    "　どうも定説がなく数カ月ごとに主流の学説が入れ替わるような状況であるが、  \n",
+    "　特段の理由がない限りSGDで問題ないと思われる。    \n",
+    "   \n",
+    "#### 関連資料  \n",
+    "[On Large-Batch Training for Deep Learning: Generalization Gap and Sharp Minima](https://arxiv.org/abs/1609.04836)  \n",
+    "　minibatch(~512)がlarge batchよりも上手く行く理由の検証。  \n",
+    "　小さなbatchは周辺がflatな最適解に向かう傾向が、large batchはsharpな最適解に向かう傾向がある。  \n",
+    "　（より小さいbatchの使用は更新量の分散を大きくするために、局所解に留まることを難しくするようだ）  \n",
+    "  \n",
+    "[Train longer, generalize better: closing the generalization gap in large batch training of neural networks](https://arxiv.org/abs/1705.08741)  \n",
+    "　flatな最適解を得るためには更新回数が重要で、large batchでも回数を増やすことや、  \n",
+    "　学習率を高くする、Batch Normalizationの適用で汎化性能を高めることができる。  \n",
+    "  \n",
+    "[Understanding deep learning requires rethinking generalization](https://openreview.net/forum?id=Sy8gdB9xx&noteId=Sy8gdB9xx)   \n",
+    "　DNNは全てのラベルを覚えきる能力を持ちながら正則化では説明のつかない汎化を示し、  \n",
+    "　SGDがその要因のひとつである。  \n",
+    "  　  \n",
+    "[The Marginal Value of Adaptive Gradient Methods in Machine Learning](https://arxiv.org/abs/1705.08292v1)  \n",
+    "　RMSprop, Adamなどの局所的な曲率情報に基づく手法は単純なSGDやmomentum SGDに比べ過学習しやすく、  \n",
+    "　収束速度は改善しない。  \n",
+    "  \n",
+    "[Fixing Weight Decay Regularization in Adam](https://arxiv.org/abs/1711.05101)  \n",
+    "　AdamがSGDに比べ汎化性能が低いのはWeight Decay regularizationが意図した値になっていないのが原因であり、  \n",
+    "　学習率への依存を無くしてやると性能改善する  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### この節を記述する際の参考資料：    \n",
+    "　[arXivTimes](https://github.com/arXivTimes/arXivTimes)   \n",
+    "　[Optimizer : 深層学習における勾配法について](https://qiita.com/tokkuman/items/1944c00415d129ca0ee9)  \n",
+    "　[OPTIMIZER 入門 ~線形回帰からAdamからEveまで](https://qiita.com/deaikei/items/29d4550fa5066184329a)  \n",
+    "　[An overview of gradient descent optimization algorithms](http://ruder.io/optimizing-gradient-descent/)  \n",
+    "\n",
+    "・ノルム  \n",
+    "　$n$次元ベクトル $\\mathbf{x} = (x_{1}, x_{2}, \\dots, x_{n})$ および $ 1 \\leq p < \\infty $ なる $p$ に対して  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\sqrt[p]{ |x_{1}|^{p} + |x_{2}|^{p} + \\cdots + |x_{n}|^{p}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　を $\\mathbf{x}$ の $L^{p}$ ノルムといい、 $||\\mathbf{x}||_{p}$ と書く。 \n",
+    "  \n",
+    "　いわゆる「距離」は$L^{2}$ ノルムであり、ユークリッドノルムという。  \n",
+    "　機械学習では $L^{1}$ ノルム、$L^{2}$ ノルム、$L^{\\infty}$ ノルムがよく用いられる。  "
    ]
   },
   {
@@ -988,7 +1044,288 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Optimizer"
+    "#### Optimization Methods\n",
+    "\n",
+    "・勾配降下法（再掲）  \n",
+    "　現実的な最適化問題では解析的に解けることは少なく、その場合に用いられる手法の一つが勾配(降下)法である。  \n",
+    "　その表現の１つは、何らかの意味で正解からの離れ具合を示す関数 $f$ および学習率 $\\eta$ を定めて、  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "x_{i+1} = x_{i} - \\eta \\frac{\\partial f}{\\partial x_{i}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　によって値 $x$ を更新していくものである。  \n",
+    "  \n",
+    "　本手法は機械学習では Batch gradient descent として実装されており、  \n",
+    "　訓練データ全体に対する計算が必要であることから遅く、実用上より良いOptimizerが開発されてきた。    \n",
+    "　SGDおよび他のよく使われる手法の多くは勾配降下法の改良版である。 \n",
+    "  \n",
+    "　以下、記号については別記なき限り、  \n",
+    "　重みなどモデルのパラメータを $\\theta$ 、誤差関数を $C$ 、誤差関数の $\\theta$ に対する勾配を $\\nabla_{\\theta}$ 、学習率を $\\eta$ 、  \n",
+    "　訓練データと正解（ラベル）データをそれぞれ $X = \\{ x_{i} \\}, Y = \\{ y_{i} \\}$ とする。  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SGD (Stochastic Gradient Descent) : オンライン勾配降下法およびミニバッチ勾配降下法\n",
+    "　データセットよりミニバッチ $(x^{(i)}, y^{(i)})$ をランダムに抽出し、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\theta = \\theta - \\eta \\nabla_{\\theta} C(\\theta; x^{(i)}; y^{(i)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "　によってパラメータを更新する。  \n",
+    "  \n",
+    "### Momentum SGD\n",
+    "　SGDによる学習時にパラメータが最適解の周辺で振動して学習が進まない問題を解決するため  \n",
+    "　慣性の考え方を導入した Optimizer である。  \n",
+    "　モメンタム項 $v$ およびその係数 $\\gamma \\, (<1) $ を導入して、  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "v_{t} &= \\gamma v_{t-1} + \\eta \\nabla_{\\theta} C(\\theta) \\\\\n",
+    "\\theta &= \\theta - v_{t}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　によりパラメータを更新する。    \n",
+    "　モメンタム項により、複数ステップに渡って勾配が同じ方向に向くとき  \n",
+    "　学習はこの方向、つまり局所解のある方向に向けて加速する。    \n",
+    "  \n",
+    "### Nesterov accelerated gradient (Nesterov Momentum)\n",
+    "　Momentumに先を予測する能力を持たせたもので、次のパラメータの位置を $\\theta -\\gamma v_{t-1}$ によって近似し、\n",
+    " \n",
+    "\\begin{align*}\n",
+    "v_{t} &= \\gamma v_{t-1} + \\eta \\nabla_{\\theta} C(\\theta -\\gamma v_{t-1}) \\\\\n",
+    "\\theta &= \\theta - v_{t}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　によって更新する。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AdaGrad\n",
+    "　適応的な学習率を持つOptimizerで、稀なパラメータに対してより大きな更新をさせるために  \n",
+    "　スパースなデータを扱うのに適する。  \n",
+    "\n",
+    "　Adagradでは、各パラメータ $\\theta_{t, i}$ について、対角成分 $(i,i)$ がタイムステップ $t$ までの $\\theta_{i}$ に対する勾配の二乗和であるような  \n",
+    "　対角行列 $G_{t} \\in \\mathbb{R}^{d \\times d}$ および平滑化項 $\\epsilon$ （通常 1e-8 程度）を用いて  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "G_{t, ii} = \\sum_{step=0}^{t} \\left( \\Delta_{\\theta}C(\\theta_{step,i}) \\right)^{2} \\\\\n",
+    "\\theta_{t+1, i} = \\theta_{t, i} - \\frac{\\eta}{\\sqrt{G_{t, ii} + \\epsilon }} \\cdot \\nabla_{\\theta} C(\\theta_{i})\n",
+    "\\end{align*}\n",
+    "\n",
+    "　の更新規則によって最適化を行う。これをベクトル化したものは次のようになる。\n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\theta_{t+1} = \\theta_{t} - \\frac{\\eta}{\\sqrt{G_{t} + \\epsilon }} \\odot \\nabla_{\\theta} C(\\theta)\n",
+    "\\end{align*}\n",
+    "\n",
+    "　Adagradは手動で学習率を調整する必要がなく扱いやすい。  \n",
+    "　一方で分母の二乗勾配が蓄積するという弱点があり、学習率が単調減少して小さくなりすぎる傾向にある。  \n",
+    "  \n",
+    "### AdaDelta\n",
+    "　Adagradの発展形で、学習率の急速な単調減少を防ぐために改良された。  \n",
+    "　勾配の蓄積を減衰するため、Adagradの更新規則にタイムステップ $t$ における移動平均 $E[g^{2}]_{t}$ を導入して  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\theta_{t+1} = \\theta_{t} - \\frac{\\eta}{\\sqrt{E[g^{2}]_{t} + \\epsilon }} \\odot \\nabla_{\\theta} C(\\theta)\n",
+    "\\end{align*}\n",
+    "\n",
+    "　と変更する。  \n",
+    "　この分母は勾配についての RMS (二乗平均平方根) 誤差基準であるから、これを省略して\n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\theta_{t+1} = \\theta_{t} - \\frac{\\eta}{RMS[g]_{t}} \\odot \\nabla_{\\theta} C(\\theta)\n",
+    "\\end{align*}\n",
+    "\n",
+    "　と書ける。  \n",
+    "   \n",
+    "　ただし、この更新式において単位が一致しないことから、元の論文ではパラメータと同じ単位を  \n",
+    "　仮定的に持たせるためにパラメータ更新の二乗についての減衰平均を先に定義している。  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "E[\\Delta \\theta^{2}]_{t} &= \\gamma E[\\Delta \\theta^{2}]_{t-1} + (1 - \\gamma) \\Delta \\theta^{2}_{t} \\\\\n",
+    "RMS[\\Delta\\theta]_{t} &= \\sqrt{E[\\Delta\\theta^{2}]_{t} + \\epsilon}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　未知である $RMS[\\Delta\\theta]_{t}$ を前のタイムステップまでのパラメータ更新のRMSで近似して、  \n",
+    "　これによって学習率 $\\eta$ を置換して次の更新規則を得る。  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\Delta \\theta_{t} &= - \\frac{RMS[\\Delta\\theta]_{t-1}}{RMS[g]_{t}}g_{t} \\\\\n",
+    "\\theta_{t+1} &= \\theta_{t} + \\Delta \\theta_{t}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　この後者の更新規則では学習率の項を含まないため、学習率の初期値を与える必要がない。  \n",
+    "   \n",
+    "　TensorFlowなどの実装では、上記の更新規則を  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\theta_{t+1} &= \\theta_{t} + \\alpha \\Delta \\theta_{t}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　としており、引数として与えたlearning rateは $\\alpha$ に代入される。  \n",
+    "\n",
+    "### RMSprop\n",
+    "　Adadeltaとは独立に編み出されたAdagradの改良版で、その更新規則は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[g^{2}]_{t} &= 0.9 E[g^{2}]_{t-1} + 0.1 g^{2}_{t} \\\\\n",
+    "\\theta_{t+1} &= \\theta_{t} - \\frac{\\eta}{\\sqrt{E[g^{2}]_{t} + \\epsilon}} g_{t}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　となり、Adadeltaのベクトル更新の式で $\\gamma = 0.9$ とした場合と同じである。  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adam (Adaptive Moment Estimation)\n",
+    "　AdadeltaやRMSpropで使われた過去の勾配の２乗 $v_{t}$ の指数関数的減衰平均に加え、  \n",
+    "　過去の勾配 $m_{t}$ の指数関数的減衰平均を保持しする。  \n",
+    "　$m_{t}, v_{t}$ はそれぞれ勾配の一次モーメントと二次モーメントの概算値である。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "m_{t} &= \\beta_{1}m_{t-1} + (1-\\beta_{1})g_{t} \\\\\n",
+    "v_{t} &= \\beta_{2}v_{t-1} + (1-\\beta_{2})g_{t}^{2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　これらのモーメントの偏りをバイアス補正した推定値を用いてパラメータを更新する。    \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{m_{t}} &= \\frac{m_{t}}{1-\\beta^{t}_{1}} \\\\\n",
+    "\\hat{v_{t}} &= \\frac{v_{t}}{1-\\beta^{t}_{2}} \\\\\n",
+    "\\theta_{t+1} &= \\theta_{t} - \\frac{\\eta}{\\sqrt{\\hat{v_{t}}} + \\epsilon}\\hat{m_{t}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　元論文では初期値として、$\\beta_{1}=0.9, \\beta_{2}=0.999, \\epsilon=10^{-8}$ が提案されている。\n",
+    " \n",
+    "### AdaMax\n",
+    "　Kingma and Ba (2015) によって提案された Optimizer である。  \n",
+    "　Adamの更新式では、 $v_{t}$ の項は勾配を過去の勾配（ $v_{t-1}$ に含まれる）と  \n",
+    "　現在の勾配の $l_{2}$ ノルムに反比例してscaleさせる。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "v_{t} &= \\beta_{2}v_{t-1} + (1-\\beta_{2})|g_{t}|^{2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　これを $l_{p}$ ノルムについて一般化すると次のようになる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "v_{t} &= \\beta_{2}^{p}v_{t-1} + (1-\\beta_{2}^{p})|g_{t}|^{p}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　一般に大きな $p$ に対するノルムは不安定であり $l_{1}$、$l_{2}$ が実践でよく用いられるが、  \n",
+    "　$l_{\\infty}$ ノルムも概して安定な振舞いを示す。  \n",
+    "　著者らの報告では、$p=\\infty$ としたときの $v_{t}$ を改めて $u_{t}$ とおいた  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "u_{t} &= \\beta_{\\infty}^{p}v_{t-1} + (1-\\beta_{2}^{\\infty})|g_{t}|^{\\infty} \\\\\n",
+    "&= max(\\beta_{2} \\cdot v_{t-1}, |g_{t}|)\n",
+    "\\end{align*}\n",
+    "\n",
+    "　はより安定した振舞いを見せた。  \n",
+    "　これを用いて、AdaMax の更新式は次のように書ける。  \n",
+    " \n",
+    "\\begin{align*}\n",
+    "\\theta_{t+1} = \\theta_{t} - \\frac{\\eta}{u_{t}}\\hat{m_{t}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "　提案されている値は $\\eta=0.002, \\beta_{1}=0.9, \\beta_{2}=0.999$ である。  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "WIP\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# code sample, from scratch_2.ipynb\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import copy\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def numerical_gradient(f,x):\n",
+    "    h = 1e-6\n",
+    "    grad = np.zeros_like(x)\n",
+    "    for i in range(x.size):\n",
+    "        temp_x_a = copy.deepcopy(x)\n",
+    "        temp_x_b = copy.deepcopy(x)\n",
+    "        temp_x_a[i] = x[i]+h\n",
+    "        temp_x_b[i] = x[i]-h\n",
+    "        grad[i] = (f(temp_x_a) - f(temp_x_b))/ (2*h)\n",
+    "        \n",
+    "    return grad\n",
+    "\n",
+    "def gradient_m(f,x,lr):\n",
+    "    next_x = x - lr * numerical_gradient(f,x)\n",
+    "    return next_x\n",
+    "\n",
+    "def f2(x):\n",
+    "    #return sum(list(map(lambda x: x**2, x)))\n",
+    "    return np.sum(np.power(x,2))\n",
+    "\n",
+    "def gradient_descent(f, x, lr=0.01, step_num=100, record_step=10, print_step=10):\n",
+    "    r = []\n",
+    "    for i in range(step_num):\n",
+    "        x = gradient_m(f2,x,lr)\n",
+    "        if (i+1)%record_step==0:\n",
+    "            r.append(x)\n",
+    "        if ((i+1)*print_step)%step_num==0:\n",
+    "            print(\"step = {0}, x = {1}\".format(i+1, x))\n",
+    "    print(\"finished. x = {0}\".format(x))\n",
+    "    return x,r\n",
+    "\n",
+    "def draw_move(r, xmin=-2, xmax=3, ymin=-2, ymax=3, record_step=10):\n",
+    "    r = np.array(r)\n",
+    "    t = np.array(range(1, (int(step_num/record_step))+1))\n",
+    "    x0, x1 = r[:,0], r[:,1]\n",
+    "    plt.scatter(x0,x1,c=t,)\n",
+    "    \n",
+    "    xc = np.linspace(xmin,xmax,400)\n",
+    "    yc = np.linspace(ymin,ymax,400)\n",
+    "    X,Y = np.meshgrid(xc,yc)\n",
+    "    Z = np.power(X,2) + np.power(Y,2)\n",
+    "    plt.contour(X,Y,Z)\n",
+    "    \n",
+    "    plt.xlim(xmin,xmax)\n",
+    "    plt.ylim(ymin,ymax)\n",
+    "    plt.hlines(0,xmin,xmax, alpha=.5)\n",
+    "    plt.vlines(0,ymin,ymax, alpha=.5)\n",
+    "    plt.show()\n",
+    "\n",
+    "x = np.array([2.5,2.0])\n",
+    "step_num =  300\n",
+    "xn,record = gradient_descent(f2, x, lr=0.01, step_num=step_num)\n",
+    "draw_move(record)"
    ]
   }
  ],
