Instances of Optimizers in TF and Keras

--- a/Syoukai_DeepLearning_4.ipynb
+++ b/Syoukai_DeepLearning_4.ipynb
@@ -1246,8 +1246,65 @@
    "metadata": {},
    "source": [
     "---\n",
+    "### Optimizer の使用法  \n",
+    "  \n",
+    "TensorFlowとKerasに実装されている[Optimizer](https://www.tensorflow.org/api_guides/python/train#Optimizers)は次の通り。  \n",
+    "Kerasではインスタンスをmodel.compile(optimizer=[optimizer instance])で渡すほか、名前で指定することもできる。  \n",
+    "\n",
+    "|Methods|TensorFlow Optimizers|Keras Optimizers|\n",
+    "|:--|:--|:--|\n",
+    "|SGD|tf.train.GradientDescentOptimizer|keras.optimizers.SGD|\n",
+    "|Momentum|tf.train.MomentumOptimizer|keras.optimizers.SGD|\n",
+    "|Nesterov Momentum|tf.train.MomentumOptimizer|keras.optimizers.SGD|\n",
+    "|Adagrad|tf.train.AdagradOptimizer|keras.optimizers.Adagrad|\n",
+    "|Adagrad Dual Averaging|tf.train.AdagradDAOptimizer|\n",
+    "|Adadelta|tf.train.AdadeltaOptimizer|keras.optimizers.Adadelta|\n",
+    "|Adam|tf.train.AdamOptimizer|keras.optimizers.Adam|\n",
+    "|Adamax| |keras.optimizers.Adamax|\n",
+    "|Nadam| |keras.optimizers.Nadam|\n",
+    "|FTRL|tf.train.FtrlOptimizer||\n",
+    "|Proximal GD|tf.train.ProximalGradientDescentOptimizer||\n",
+    "|Proximal Adagrad|tf.train.ProximalAdagradOptimizer||\n",
+    "|RMSProp|tf.train.RMSPropOptimizer|keras.optimizers.RMSprop|\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "WIP\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Optimizer の実装\n",
+    "後学のため、build-in のものを使わずに実装する。\n",
+    "\n",
+    "#### SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
