Instances of Optimizers in TF and Keras

--- a/Syoukai_DeepLearning_4.ipynb
+++ b/Syoukai_DeepLearning_4.ipynb
@@ -1257,7 +1257,7 @@
     "|Momentum|tf.train.MomentumOptimizer|keras.optimizers.SGD|\n",
     "|Nesterov Momentum|tf.train.MomentumOptimizer|keras.optimizers.SGD|\n",
     "|Adagrad|tf.train.AdagradOptimizer|keras.optimizers.Adagrad|\n",
-    "|Adagrad Dual Averaging|tf.train.AdagradDAOptimizer|\n",
+    "|Adagrad Dual Averaging|tf.train.AdagradDAOptimizer||\n",
     "|Adadelta|tf.train.AdadeltaOptimizer|keras.optimizers.Adadelta|\n",
     "|Adam|tf.train.AdamOptimizer|keras.optimizers.Adam|\n",
     "|Adamax| |keras.optimizers.Adamax|\n",
